# Hart-Game-Template

./: .gitmodules  CMakeLists.txt  README.md
Game/: CMakeLists.txt
Game/src/: Game.cpp
